Mon Jul 06 09:44:54 GMT 2015  Olly Betts <olly@survex.com>

	* common/safeunistd.h,configure.ac: Don't provide our own
	  implementation of sleep() under __WIN32__ if there's already one -
	  mingw provides one, and in some situations it seems to clash with
	  ours.  Reported to xapian-discuss by John Alveris.

Mon Jun 29 12:10:22 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Need <unistd.h> for unlink() on
	  FreeBSD, reported by Germán M. Bravo via github PR 72.

Wed Jun 24 10:07:05 GMT 2015  Olly Betts <olly@survex.com>

	* tests/harness/testutils.cc,tests/harness/testutils.h: Use
	  'Xapian::docid' instead of 'unsigned int' so that things work with
	  64 bit docids (see #385).

Tue Jun 23 13:38:54 GMT 2015  Olly Betts <olly@survex.com>

	* api/snipper.cc,api/snipperinternal.h: Use appropriate typedefs
	  rather than unsigned int.  Split out of patch by Dylan Griffith in
	  #385.

Tue Jun 23 13:32:36 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_database.cc,backends/chert/chert_types.h,
	  backends/glass/glass_database.cc,backends/glass/glass_defs.h: Add
	  constants CHERT_MAX_DOCID and GLASS_MAX_DOCID for the largest docid
	  which the backends support, independent of the size of type
	  Xapian::docid.  (helps #385)

Tue Jun 23 13:19:06 GMT 2015  Olly Betts <olly@survex.com>

	* tests/api_backend.cc: Add regression test for #678.

Tue Jun 23 13:04:06 GMT 2015  Olly Betts <olly@survex.com>

	* api/,backends/remote/net_postlist.cc,
	  backends/remote/remote-database.cc,
	  geospatial/latlong_posting_source.cc,net/,tests/unittest.cc: Split
	  decode_length() into versions which decode a 32 vs 64 bit value,
	  and which check that there's at least the decoded length in bytes
	  in the source data.  (Fixes #678 and helps #385)

Tue Jun 23 11:49:15 GMT 2015  Olly Betts <olly@survex.com>

	* net/remoteserver.cc: Check length of key in MSG_SETMETADATA.

Sat Jun 20 13:05:50 GMT 2015  Olly Betts <olly@survex.com>
