@@ -472,6 +472,23 @@ ChertDatabase::set_revision_number(chert_revision_number_t new_revision)
     }
 }
 
+void
+ChertDatabase::request_document(Xapian::docid did) const
+{
+    record_table.readahead_for_record(did);
+}
+
+void
+ChertDatabase::readahead_for_query(const Xapian::Query &query)
+{
+    Xapian::TermIterator t;
+    for (t = query.get_unique_terms_begin(); t != Xapian::TermIterator(); ++t) {
+	const string & term = *t;
+	if (!postlist_table.readahead_key(ChertPostListTable::make_key(term)))
+	    break;
+    }
+}
+
 bool
 ChertDatabase::reopen()
 {
