@@ -164,6 +164,17 @@ throw_block_error(const char * s, off_t b, int e)
     throw Xapian::DatabaseError(m, e);
 }
 
+#ifdef HAVE_POSIX_FADVISE
+bool
+io_readahead_block(int fd, size_t n, off_t b)
+{
+    off_t o = b * n;
+    // Assume that any failure is likely to also happen for another call with
+    // the same fd.
+    return posix_fadvise(fd, o, n, POSIX_FADV_WILLNEED) == 0;
+}
+#endif
+
 void
 io_read_block(int fd, char * p, size_t n, off_t b)
 {
