@@ -835,6 +835,7 @@ AC_CHECK_DECL([fdatasync(int)], [
 )
 
 AC_CHECK_FUNCS([fsync])
+AC_CHECK_FUNCS([posix_fadvise])
 
 dnl HP-UX has pread and pwrite, but they don't work!  Apparently this problem
 dnl manifests when largefile support is enabled, and we definitely want that
